--- a/variants/nrf52840/diy/nrf52_promicro_diy_tcxo/platformio.ini
+++ b/variants/nrf52840/diy/nrf52_promicro_diy_tcxo/platformio.ini
@@ -1,22 +1,26 @@
 ; Promicro + E22(0)-xxxM / HT-RA62 modules board variant - DIY - with TCXO
 [env:nrf52_promicro_diy_tcxo]
-extends = nrf52840_base
+extends = nrf52_base
 board = promicro-nrf52840
-build_flags = ${nrf52840_base.build_flags}
+build_flags = ${nrf52_base.build_flags}
   -I variants/nrf52840/diy/nrf52_promicro_diy_tcxo
   -D NRF52_PROMICRO_DIY
 build_src_filter = ${nrf52_base.build_src_filter} +<../variants/nrf52840/diy/nrf52_promicro_diy_tcxo>
 lib_deps = 
-  ${nrf52840_base.lib_deps}
+  ${nrf52_base.lib_deps}
+  ${environmental_base.lib_deps}
+  ${environmental_extra.lib_deps}
+  # renovate: datasource=git-refs depName=Kongduino-Adafruit_nRFCrypto packageName=https://github.com/Kongduino/Adafruit_nRFCrypto gitBranch=master
+  https://github.com/Kongduino/Adafruit_nRFCrypto/archive/5f838d2709461a2c981f642917aa50254a25c14c.zip
 debug_tool = jlink
 
 ; NRF52 ProMicro w/ E-Ink display
 [env:nrf52_promicro_diy-inkhud]
 board_level = extra
-extends = nrf52840_base, inkhud
+extends = nrf52_base, inkhud
 board = promicro-nrf52840
 build_flags =
-  ${nrf52840_base.build_flags}
+  ${nrf52_base.build_flags}
   ${inkhud.build_flags}
   -I variants/nrf52840/diy/nrf52_promicro_diy_tcxo
   -D NRF52_PROMICRO_DIY
@@ -26,7 +30,11 @@ build_src_filter =
   +<../variants/nrf52840/diy/nrf52_promicro_diy_tcxo>
 lib_deps =
   ${inkhud.lib_deps} ; InkHUD libs first, so we get GFXRoot instead of AdafruitGFX
-  ${nrf52840_base.lib_deps}
+  ${nrf52_base.lib_deps}
+  ${environmental_base.lib_deps}
+  ${environmental_extra.lib_deps}
+  # renovate: datasource=git-refs depName=Kongduino-Adafruit_nRFCrypto packageName=https://github.com/Kongduino/Adafruit_nRFCrypto gitBranch=master
+  https://github.com/Kongduino/Adafruit_nRFCrypto/archive/5f838d2709461a2c981f642917aa50254a25c14c.zip
 extra_scripts =
   ${env.extra_scripts}
   variants/nrf52840/diy/nrf52_promicro_diy_tcxo/custom_build_tasks.py ; Add to PIO's Project Tasks pane: preset builds for common displays
