--- a/.github/workflows/build-nrf52.yml
+++ b/.github/workflows/build-nrf52.yml
@@ -101,7 +101,7 @@ jobs:
         retention-days: 30
 
     - name: Create Release
-      if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+      if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
       uses: softprops/action-gh-release@v2
       with:
         files: |
@@ -109,8 +109,8 @@ jobs:
           release/*.hex
           release/*.zip
           release/*.elf
-        tag_name: ${{ github.ref_name }}
-        name: nRF52 Firmware Release ${{ github.ref_name }}
+        tag_name: ${{ github.ref_name }}-${{ github.run_number }}
+        name: nRF52 Firmware Release ${{ github.ref_name }}-${{ github.run_number }}
         body: |
           ## nRF52 固件发布
           
@@ -118,6 +118,7 @@ jobs:
           - **提交**: ${{ github.sha }}
           - **分支**: ${{ github.ref_name }}
           - **构建时间**: ${{ github.run_number }}
+          - **触发方式**: ${{ github.event_name }}
           
           ### 固件文件
           - `.uf2` - UF2格式固件，可直接拖拽到设备
